
  - Apply font to Tag Verification and Project Files windows
  http://sourceforge.net/support/tracker.php?aid=1545636

 Other enhancements:

  - New logging API

 Bug fixes:

  - Hardcoded bits of text unlocalisable
  http://sourceforge.net/support/tracker.php?aid=1602798

  - log.txt encoding
  http://sourceforge.net/support/tracker.php?aid=1600139

----------------------------------------------------------------------

1.6.2 vs. 1.4.5.04
   73 Enchancements
  125 Bugfixes

----------------------------------------------------------------------
1.6.2
Contains a new file filter and a number of bug fixes

 Implemented requests:

  - Add direct support for Office 2007 XML
  http://sourceforge.net/support/tracker.php?aid=1589239

 Other enhancements:

  - German instant start tutorial

 Bug fixes:

  - 1618742 - Ctrl+Z in search window is hard coded
  http://sourceforge.net/support/tracker.php?aid=1618742

  - 1612550 - Localization projects glitches
  http://sourceforge.net/support/tracker.php?aid=1612550

  - 1541277 - OO: Segmenting on inline drawings
  http://sourceforge.net/support/tracker.php?aid=1541277

  - 1628890 - Sentence break on comments in OOo documents
  http://sourceforge.net/support/tracker.php?aid=1628890

----------------------------------------------------------------------
1.6.1_04
Fixes a licensing issue with the MRJAdapter lib

Version 1.09 of the MRJAdapter library is licensed under the
Artistic License, which is incompatible with the GPL, the license
OmegaT uses. The effect of this is that redistribution of OmegaT
is not allowed. We have fixed this by reverting to version 1.08
of the MRJAdapter library, licensed under the LGPL, which is
GPL-compatible.

----------------------------------------------------------------------
1.6.1_03
Contains new and updated localisations.

 Implemented requests:

  -

 Other enhancements:

  - Italian instant start guide updated

  - Serbo-Croation user manual translation

  - Albanian user manual translation
